--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ivancotacte/BantayKalusugan-API#readme",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -26,7 +27,9 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
-    "mongoose": "^8.4.1"
+    "moment-timezone": "^0.5.45",
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
