--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 API_KEY=
 OPENAI_API_KEY=
 SESSION_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
