--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "openai": "^4.53.0"
+    "mysql2": "^3.11.0",
+    "openai": "^4.53.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
